--- a/Getting_data_for_final_assignment.ipynb
+++ b/Getting_data_for_final_assignment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10 Famous Cities of The American Continent Predominant Food Styles, A Data Analysis on The Restaurant Scenery and The Demographic Influence."
+    "# 10 Famous Cities of The American Continent Predominant Food Styles, A Data Analysis on The Restaurant Scenery and It's Demographic Influence."
    ]
   },
   {
