--- a/Canada10CitiesPresentationAndReport.ipynb
+++ b/Canada10CitiesPresentationAndReport.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# <div style=\"text-align: center\"> 10 Canada's Cities Top 10 Most Common Types of Food Venues/Restaurants and Population Origins</div> \n",
-    "<div style=\"text-align: center\">A Data Analysis on The Food Scenery and It's Relation to Population Origins.</div>\n",
+    "<div style=\"text-align: center\">A Data Analysis on The Food Scenery and Its Relation to Population Origins.</div>\n",
     "\n"
    ]
   },
@@ -1300,7 +1300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: justify\">As the data shows, the people origins in Canada have a strong impact on the prevalency of types of food venues in it's cities. As exemplified in cases as Montreal and Quebec City, where the french origins played a strong part on the prevalency of this type of food venue by being the most common type of food venue and the largest origin of the population in those cities after Canadian origins.</div>"
+    "<div style=\"text-align: justify\">As the data shows, the people origins in Canada have a strong impact on the prevalence of types of food venues in it's cities. As exemplified in cases as Montreal and Quebec City, where the french origins played a strong part on the prevalence of this type of food venue by being the most common type of food venue and the largest origin of the population in those cities after Canadian origins.</div>"
    ]
   },
   {
